# backend/alembic/versions/b679abbe21c0_add_server_default_to_enable_jsx.py
@@ -1,0 +1,33 @@
+"""Add server_default to enable_jsx
+
+Revision ID: b679abbe21c0
+Revises: f4ca5113a4c0
+Create Date: 2026-01-11 11:27:39.130939
+
+"""
+from typing import Sequence, Union
+
+from alembic import op
+import sqlalchemy as sa
+import sqlmodel  # SQLModel 类型支持（如 AutoString）
+
+
+# revision identifiers, used by Alembic.
+revision: str = 'b679abbe21c0'
+down_revision: Union[str, Sequence[str], None] = 'f4ca5113a4c0'
+branch_labels: Union[str, Sequence[str], None] = None
+depends_on: Union[str, Sequence[str], None] = None
+
+
+def upgrade() -> None:
+    """Upgrade schema."""
+    # ### commands auto generated by Alembic - please adjust! ###
+    pass
+    # ### end Alembic commands ###
+
+
+def downgrade() -> None:
+    """Downgrade schema."""
+    # ### commands auto generated by Alembic - please adjust! ###
+    pass
+    # ### end Alembic commands ###
